--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,9 +1,17 @@
 .friendMessage {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
+    margin-bottom: 47px;
 }
 
 .friendImageAndText {
-
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    border: 1px solid red;
+    gap: 20px; /* после убрать */
 }
 
 .friendImageAndText img {
@@ -11,7 +19,11 @@
 }
 
 .friendText {
-
+    /*svg под текстом более белая серая */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-left: 20px; /* после убрать */
 }
 
 .friendText:after {
@@ -27,5 +39,14 @@
 }
 
 .friendTime {
+    margin: 5px 11px 0 11px;
+    border: 1px solid #c700ff;
+    width: 500px;
+
+}
+.time {
+    display: flex;
+    justify-content: flex-end;
+    margin: 5px 11px 0 11px;
 
 }
