--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,17 +1,30 @@
 .message {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: inherit;
+    margin-bottom: 47px;
 
 }
 
 .imageAndText {
-
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: center;
+    border: 1px solid red;
+    gap: 20px; /* после убрать */
 }
 
 .imageAndText img {
+    width: 48px;
 
 }
 
 .text {
-
+    /*svg под текстом */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 }
 
 .text:after {
@@ -27,5 +40,9 @@
 }
 
 .time {
+    display: flex;
+    justify-content: flex-end;
+    margin: 5px 11px 0 11px;
+    border: 1px solid #c700ff;
 
 }
