--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,11 +1,39 @@
 .App {
     --header_height: 60px;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.conteiner {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 100%;
+    padding: 131px 0px 216px 0px;
+    /*background-color: #ffe9a7;*/
 }
 
 .hw {
-
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-bottom: 1px solid #D9D9D9;
+    border-top: 1px solid #D9D9D9;
 }
 
 .hwTitle {
-
+    color: #000;
+    font-family: Montserrat sans-serif;
+    font-size: 22px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    margin: 10px 10px 10px 70px;
+}
+.message {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
 }
