--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,18 +1,20 @@
 .message {
     display: flex;
+
     flex-direction: column;
     justify-content: space-around;
     align-items: inherit;
-    margin-bottom: 47px;
-
+    margin: 24px 70px 47px 10px;
 }
 
 .imageAndText {
     display: flex;
     flex-direction: row-reverse;
     align-items: center;
-    border: 1px solid red;
-    gap: 20px; /* после убрать */
+    position: relative;
+
+    /*border: 1px solid red;*/
+
 }
 
 .imageAndText img {
@@ -22,27 +24,54 @@
 
 .text {
     /*svg под текстом */
+    position: absolute;
+    margin-right: 73px;
+    z-index: 999;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    color: #FFF;
+    /*border: 1px solid #c700ff;*/
 }
 
 .text:after {
+    position: absolute;
+    margin-right: 73px;
+    z-index: 999;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    color: #FFF;
+    text-shadow: 1px 4px 4px rgba(0, 0, 0, 0.25);
 
 }
 
 .name {
-
+    font-family: Montserrat sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
 
 .messageText {
-
+    font-family: Montserrat sans-serif;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
 }
 
 .time {
     display: flex;
     justify-content: flex-end;
     margin: 5px 11px 0 11px;
-    border: 1px solid #c700ff;
+    /*border: 1px solid #c700ff;*/
 
+    color: #000;
+    font-family: Montserrat sans-serif;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
 }
