finished homework hw3

--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -5,15 +5,18 @@
 }
 
 .error {
+    color: red;
 }
 
 .input {
+    border-color: #37ff00;
 }
 
 .input:focus {
 }
 
 .errorInput {
+    border-color: red;
 }
 
 .button {
