--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,5 +1,10 @@
 .App {
     --header_height: 60px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 40px;
 }
 
 .hw {
