--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,65 @@
 .button {
+    min-width: 100px;
+    padding: 5px;
+    border-radius: 5px;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-size: 16px;
 }
 
 .disabled {
+    background-color: rgba(0, 77, 153, 0.25);
+    border: 1px solid rgba(0, 77, 153, 0.25);
 }
 
 .secondary {
+    background-color: #fff;
+    border: 1px solid #0066CC;
+    color: #0066CC;
+    font-weight: bold;
 }
 
 .default {
+    background-color: #0066CC;
+    border: 1px solid #0066CC;
+    color: #f5f2f2;
+    font-weight: bold;
 }
 
 .red {
+    background-color: #CC1439;
+    border: 1px solid #CC1439;
+    color: #f5f2f2;
+    font-weight: bold;
 }
 
 .default:hover {
+    background-color: #0080FF;
+    border: 1px solid #0080FF;
 }
 
 .red:hover {
+    background-color: #FF1A47;
+    border: 1px solid #FF1A47;
 }
 
 .secondary:hover {
+    background-color: #E5F0FA;
 }
 
 
 .default:active {
+    color: rgba(0, 0, 0, 0.8);
 }
 
 .secondary:active {
+    color: rgba(0, 0, 0, 0.8);
 }
 
 .red:active {
+    color: rgba(0, 0, 0, 0.8);;
 }
 
 .button:disabled {
+    color: rgba(0, 0, 0, 0.51);
 }
